--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
