--- a/backend/package.json
+++ b/backend/package.json
@@ -26,13 +26,17 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "@nestjs/typeorm": "^10.0.1",
     "@prisma/client": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
+    "mysql2": "^3.6.5",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
