--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase-admin": "^11.11.0",
     "mysql2": "^3.6.5",
     "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
