:rocket: add: CD to autodeploy database and API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,17 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
     ports:
       - ${DATABASE_PORT}:${DATABASE_PORT}
+    ports:
+      - '5432:5432'
+      
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nest-docker-postgres
+    environment:
+      - PORT=3000
+    ports:
+      - '3000:3000'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
+      - ./src:/app/src
