--- a/quiz_game_part/package.json
+++ b/quiz_game_part/package.json
@@ -27,7 +27,8 @@
     "@nestjs/websockets": "^10.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
