--- a/quiz_game_part/package.json
+++ b/quiz_game_part/package.json
@@ -22,13 +22,16 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.1",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.1",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^12.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
